--- a/d/de/des/deseretbook.com.html
+++ b/d/de/des/deseretbook.com.html
@@ -1,10 +1,12 @@
-<!--The following is the downloaded HTML source of the deseretbook.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605175359id_/http%3A//deseretbook.com/store/help/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the deseretbook.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207001342id_/http%3A//deseretbook.com/store/help/privacy) for the most accurate reproduction.-->
 
 <html><head>
     <link rel="stylesheet" type="text/css" src="http://images.deseretbook.com/store.css" href="http://images.deseretbook.com/store.css">
     
 <title>DeseretBook.com - Privacy Policy</title>
+
+
 
 </head>
 
@@ -17,7 +19,7 @@
 <td width="82" height="33"><a href="/store"><img src="http://images.deseretbook.com/4/ueber/newheader/button-store-1.gif" border="0" height="33" width="82"></a></td>
 <td width="84" height="33"><a href="/mormon-life/"><img src="http://images.deseretbook.com/4/ueber/newheader/button-ml-2.gif" border="0" height="33" width="84"></a></td>
 <td width="83" height="33"><a href="/time-out/"><img src="http://images.deseretbook.com/4/ueber/newheader/button-to.gif" border="0" height="33" width="83"></a></td>
-<td width="84" height="33"><a href="/gospelink"><img src="http://images.deseretbook.com/4/ueber/newheader/button-gl.gif" border="0" height="33" width="84"></a></td>
+<td width="84" height="33"><a href="http://gospelink.com"><img src="http://images.deseretbook.com/4/ueber/newheader/button-gl.gif" border="0" height="33" width="84"></a></td>
 <td width="82" height="33"><a href="/newsletters"><img src="http://images.deseretbook.com/4/ueber/newheader/button-nl.gif" border="0" height="33" width="82"></a></td>
 
 <td width="84" height="33"><a href="/auctions"><img src="http://images.deseretbook.com/4/ueber/newheader/button-auc.gif" border="0" height="33" width="84"></a></td>
@@ -213,6 +215,11 @@ border=0 height=33 width=54></a>--><img src="http://images.deseretbook.com/4/ueb
 		</tr>
 			
 		
+		<tr>
+		<td><small><a href="/store/browse-category?category_id=1019"><font color="C4EFC4">Humanitarian Services</font></a></small></td>
+		</tr>
+			
+		
 		</tbody></table>
 
 </td>
@@ -230,7 +237,7 @@ border=0 height=33 width=54></a>--><img src="http://images.deseretbook.com/4/ueb
 		</tr>
 		<tr>
 		<td width="4" background="http://images.deseretbook.com/4/store/content-left-bg.gif"><img src="http://images.deseretbook.com/4/store/content-left.gif" hspace="0" vspace="0" border="0" width="4"></td>
-		<td>
+		<td valign="top">
 		
 
 <h2>Privacy Policy</h2>
@@ -366,32 +373,44 @@ on purchases over $50<p>
 </td>
 </tr>
 </tbody></table>
-<table width="129" cellpadding="0" cellspacing="0" border="0" bgcolor="#528A52">
-<tbody><tr>
-<td align="center">
+<a href="/store/gift-certificates"><img src="http://images.deseretbook.com/4/store/giftcert-new.gif" border="0"></a>
 
-	<table width="90%" background="http://images.deseretbook.com/4/ueber/trans.gif" align="center" cellpadding="0" cellspacing="0" border="0">
-	<tbody><tr>
-	<td align="center">
+
+<!--
+
+<table width=129 cellpadding=0 cellspacing=0 border=0 bgcolor="#528A52">
+<tr>
+<td align=center>
+
+	<table width="90%" background="http://images.deseretbook.com/4/ueber/trans.gif" align=center cellpadding=0 cellspacing=0 border=0>
+	<tr>
+	<td align=center>
           <b><a href="/store/gift-certificates"><font color="#ffffff">P<small>URCHASE A</small><br>G<small>IFT</small><br>C<small>ERTIFICATE</small></font></a></b>
 	</td></tr>
-	</tbody></table>
+	</table>
 
 
 </td></tr><tr><td>
 
 
-<table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="000000" background="http://images.deseretbook.com/4/ueber/trans.gif">
-<tbody><tr height="1">
-<td height="1" bgcolor="000000"><img src="http://images.deseretbook.com/4/ueber/trans.gif"></td>
+<table cellpadding=0 cellspacing=0 border=0 width="100%" bgcolor=000000 background="http://images.deseretbook.com/4/ueber/trans.gif">
+<tr height=1>
+<td height=1 bgcolor=000000><img src="http://images.deseretbook.com/4/ueber/trans.gif"></td>
 </tr>
-</tbody></table>
+</table>
 
 
 
 </td>
 </tr>
-</tbody></table>
+</table>
+
+-->
+
+
+<a href="/view/cellar"><img src="http://images.deseretbook.com/4/store/cellar-side-2.gif" border="0"></a>
+
+
 
 
 </td>
