--- a/s/so/son/sonicbids.com.html
+++ b/s/so/son/sonicbids.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sonicbids.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605161834id_/http%3A//www.sonicbids.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sonicbids.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207002415id_/http%3A//www.sonicbids.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Sonicbids</title>
@@ -121,9 +121,9 @@ window.name = 'opener';
 		<td valign="top">
 			<table border="0" cellpadding="0" cellspacing="0" width="100%">
 				<tbody><tr>
-					<td width="1" height="1" rowspan="2" valign="top" nowrap=""><a href="http://www.sonicbids.com/default.asp"><img src="/img/home_logo.gif" border="0" width="259" height="126"></a></td>
+					<td width="1" height="1" rowspan="2" valign="top" nowrap=""><a href="http://www.sonicbids.com/default.asp"><img src="/img/home_logo_holiday.gif" border="0" width="259" height="126"></a></td>
 					<td width="1" height="1" colspan="7" valign="top" background="/img/home_right_top_addition.gif" nowrap="">
-					<map name="map_free_trial"><area href="https://www.sonicbids.com/account/register.asp" shape="rect" coords="240,0,486,85"></map><img usemap="#map_free_trial" src="/img/home_banner_free_trial.gif" border="0" width="493" height="98"></td>
+					<map name="map_free_trial"><area href="https://www.sonicbids.com/account/register.asp" shape="rect" coords="240,0,486,85"></map><img usemap="#map_free_trial" src="/img/home_banner_free_trial_holiday.gif" border="0" width="493" height="98"></td>
 					<td width="100%" valign="top" height="1" background="/img/home_right_top_addition.gif" nowrap=""><img src="/img/spacer.gif" width="1" height="1" border="0"></td>
 				</tr>
 				<tr>
@@ -301,7 +301,7 @@ function login_check() {
 	</tr>
 	<tr>
 		<td valign="middle" width="25" bgcolor="#66CCCC" nowrap=""><img src="/img/spacer.gif" border="0" width="10" height="1"><img name="p10" src="/img/white_ball.gif" border="0" width="6" height="6"></td>
-		<td bgcolor="#66CCCC"><a class="TextSmall" href="javascript:fncOpenEPK('1993');" onmouseover="mon('p10')" onmouseout="mout('p10')">View&nbsp;an&nbsp;EPK™</a></td>
+		<td bgcolor="#66CCCC"><a class="TextSmall" href="javascript:fncOpenEPK('1993', '', '', '', 0);" onmouseover="mon('p10')" onmouseout="mout('p10')">View&nbsp;an&nbsp;EPK™</a></td>
 	</tr>
 	<tr>
 		<td valign="middle" width="25" bgcolor="#66CCCC" nowrap=""><img src="/img/spacer.gif" border="0" width="10" height="1"><img name="p11" src="/img/white_ball.gif" border="0" width="6" height="6"></td>
@@ -367,9 +367,6 @@ function login_check() {
 	<tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
 				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.oasiscd.com" target="_blank"><img src="/logos/168.gif" width="100" vspace="4" border="0"></a></td>
-			</tr><tr>
-				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
-				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.jagermusic.com" target="_blank"><img src="/logos/262.gif" width="100" vspace="4" border="0"></a></td>
 			</tr>
 	<tr>
 		<td colspan="2" bgcolor="#cccccc"><img name="calibr" src="/img/spacer.gif" border="0" width="1" height="5"></td>
@@ -385,34 +382,49 @@ function login_check() {
 	</tr>
 	<tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
+				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.midem.com" target="_blank"><img src="/logos/336.jpg" width="100" vspace="4" border="0"></a></td>
+			</tr><tr>
+				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
 				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.cmj.com" target="_blank"><img src="/logos/282.gif" width="100" vspace="4" border="0"></a></td>
 			</tr><tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
-				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.billboard.com/bb/songcontest/index.jsp" target="_blank"><img src="/logos/169.gif" width="100" vspace="4" border="0"></a></td>
+				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.jlsc.com" target="_blank"><img src="/logos/295.gif" width="100" vspace="4" border="0"></a></td>
 			</tr><tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
-				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.cdbaby.com" target="_blank"><img src="/logos/246.jpg" width="100" vspace="4" border="0"></a></td>
+				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.songwritingcompetition.com" target="_blank"><img src="/logos/173.gif" width="100" vspace="4" border="0"></a></td>
 			</tr><tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
 				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.musiciansatlas.com/sonicbids.asp" target="_blank"><img src="/logos/216.jpg" width="100" vspace="4" border="0"></a></td>
 			</tr><tr>
 				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
+				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.cdbaby.com" target="_blank"><img src="/logos/246.jpg" width="100" vspace="4" border="0"></a></td>
+			</tr><tr>
+				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
 				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.indiebible.com/sonicbids" target="_blank"><img src="/logos/233.jpg" width="100" vspace="4" border="0"></a></td>
-			</tr><tr>
-				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
-				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.nemoboston.com/" target="_blank"><img src="/logos/170.jpg" width="100" vspace="4" border="0"></a></td>
-			</tr><tr>
-				<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
-				<td class="TextSmall" bgcolor="#9C9A9A" valign="top"><a href="http://www.locobazooka.com" target="_blank"><img src="/logos/179.jpg" width="100" vspace="4" border="0"></a></td>
 			</tr>
-	<tr width="179">
+	<!--<tr width="179">
 		<td colspan="2" bgcolor="#FFFFFF" width="179"><img src="/img/spacer.gif" border="0" width="5" height="2"></td>
-	</tr>
-	
+	</tr>-->
+	<tr>
+					<td colspan="2" bgcolor="#cccccc"><img name="calibr" src="/img/spacer.gif" border="0" width="1" height="2"></td>
+				</tr>
+				<tr>
+					<td valign="bottom" width="25" bgcolor="#CCCCCC" nowrap=""><img src="/img/spacer.gif" border="0" width="8" height="1"><img src="/img/down_arrow.gif" border="0" width="10" height="11"></td>
+					<td class="TextSmall" bgcolor="#CCCCCC" valign="top"><b>FEATURED PARTNER</b></td>
+				</tr>
+				<tr>
+					<td colspan="2" bgcolor="#cccccc"><img name="calibr" src="/img/spacer.gif" border="0" width="1" height="2"></td>
+				</tr>
+				<tr>
+					<td valign="bottom" width="25" bgcolor="#9C9A9A" nowrap=""><img src="/img/spacer.gif" border="0" width="18" height="1"></td>
+					<td bgcolor="#9C9A9A" align="left">
+							<img src="/img/spacer.gif" border="0" width="20" height="5"><br><a href="http://www.americanamusic.org" target="_blank"><img src="/logos/202.gif" width="100" vspace="4" border="0"></a><br>
+							<img src="/img/spacer.gif" border="0" width="20" height="5"><br>
+					</td>
+				</tr>
 	<tr width="179">
 		<td align="right" colspan="2" bgcolor="#66CCCC" width="179"><img src="/img/home_left_cap.gif" border="0" width="175" height="26"></td>
 	</tr>
-	
 	</tbody></table>
 	<!-- End Of Navigation table -->
 
@@ -420,7 +432,8 @@ function login_check() {
 </td>
 						<td valign="top" width="10"><img src="/img/spacer.gif" border="0" width="15" height="1"></td>
 						<td valign="top">
-<table border="0" cellspacing="2" cellpadding="0" width="600">
+
+<a name="sonicbids_content_top"></a><table border="0" cellspacing="2" cellpadding="0" width="600">
 	<tbody><tr>
     <td valign="top" class="body"> 
       <br><font class="MajorHeader">Privacy Policy</font><br>&nbsp;
