--- a/o/on/onl/online-sweepstakes.com.html
+++ b/o/on/onl/online-sweepstakes.com.html
@@ -1,184 +1,163 @@
-<!--The following is the downloaded HTML source of the online-sweepstakes.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401222725id_/http%3A//online-sweepstakes.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the online-sweepstakes.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207002949id_/http%3A//www.online-sweepstakes.com/privacy) for the most accurate reproduction.-->
 
-<html><head> <title>Online-Sweepstakes.com | Privacy Statement</title>
-<link rel="stylesheet" href="/images/style.css"><script type="text/javascript" src="/js/sweeps.js"></script>
-</head>
-<body bgcolor="#669966" id="all" topmargin="5" leftmargin="5" marginheight="5" marginwidth="5">
-<table bgcolor="#ffffff" width="100%" cellpadding="10" cellspacing="0" border="0">
-	<tbody><tr><td>
-<table width="100%" align="center" cellpadding="2" cellspacing="0" border="0">
-<tbody><tr valign="top">
-	<td><a href="/"><img src="/images/online-sweepstakes1.jpg" alt="Online-Sweepstakes.com" width="250" height="45" border="0" valign="top"></a></td>
-	<form action="/cgi-bin/search.cgi" method="get"></form>
-	<td valign="middle">
-		<input type="text" name="query" size="17" class="text"> 
-		<input type="Submit" value="Search" class="MySweeps">
-	</td>
-	
-	<form name="navigation"></form>
-	<td align="right" class="small"><br><br>
-		<select name="sitemenu" onchange="goThere(this.form.sitemenu)" class="text">
-			<option value="">Navigation Menu
-			</option><option value="/">Home
-			</option><option value="/forums/">Forums
-			</option><option value="/mysweeps/">MySweeps™
-			</option><option value="/new/">New Sweeps
-			</option><option value="/expiring/">Expiring Sweeps
-			</option><option value="/expired/">Expired Sweeps
-			</option><option value="/top100/">Top 100 Sweeps
-			</option><option value="/cgi-bin/search.cgi">Advanced Search
-			</option><option value="/cgi-bin/add.cgi">Add a Sweep
-		</option></select>
-	</td>
-	
-</tr>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Online-Sweepstakes.com | Privacy Statement</title><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">  <link rel="stylesheet" href="/js/common.css"><script type="text/javascript" src="/js/common.js"></script><style type="text/css">#sweep:active{display:none;}#sweep{-moz-user-select:none;}</style><script type="text/javascript" src="/js/nonmembers.js"></script>  </head><body bgcolor="#669966" id="all" topmargin="5" leftmargin="5" marginheight="5" marginwidth="5" onselectstart="return false"><a name="#">
+<table bgcolor="#ffffff" width="100%" cellpadding="7" cellspacing="0" border="0"><tbody><tr><td>
+<table width="100%" align="center" cellpadding="1" cellspacing="0" border="0"><tbody><tr>
+<td width="50%" align="left"><a href="/"><img src="/images/online-sweepstakes.jpg" alt="Online-Sweepstakes.com" width="250" height="45" border="0">
+</a></td><td valign="top" nowrap="nowrap">
+<form name="mysearch" action="/search/" method="get">
+<input type="text" name="query" value="" size="20" class="text" onfocus="this.form.db.style.visibility='visible';"> <input type="button" value="Search" class="mysweeps" onclick="doSearch(this.form);">
+<br><select name="db" class="text" style="visibility:hidden;">
+
+<option value="">current sweeps
+</option><option value="expired">expired sweeps
+
+</option><option value="f">forums
+</option><option value="">-----------
+</option><option value="g">Google
+</option><option value="d">Dictionary.com
+</option></select>
+</form></td>
+<td width="50%" align="right" class="small">Monday, December 6, 2004 - 7:29pm ET<br><br>
+<form name="navigation">
+<select name="sitemenu" onchange="goThere(this.form.sitemenu)" class="text">
+<option value="">Navigation Menu
+</option><option value="">-----------
+</option><option value="/">Home
+</option><option value="/forums/">Forums
+</option><option value="/mysweeps/">MySweeps™
+
+</option><option value="">-----------
+</option><option value="/new/">New Sweeps
+</option><option value="/expiring/">Expiring Sweeps
+</option><option value="/top100/">Top 100 Sweeps
+</option><option value="/expired/">Expired Sweeps
+</option></select></form>
+</td></tr>
 </tbody></table>
+<table width="100%" align="center" cellpadding="1" cellspacing="0" border="0"><tbody><tr><td class="titlebar" nowrap=""> &nbsp; Privacy Statement &nbsp; &nbsp; &nbsp; </td><td width="90%" align="right" valign="bottom" class="navbar"> &nbsp; </td></tr>
+</tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0"><tbody><tr><td width="1" bgcolor="#666666"></td><td valign="top">
+<table width="100%" cellpadding="1" cellspacing="10" border="0" id="sweep">
+<tbody><tr><td width="50%" class="topleft" valign="top"><form action="/members/login" method="post"><input type="hidden" name="bypass" value="1"><input type="text" class="text" name="username" value="" size="10"> <input type="password" class="text" name="password" value="" size="10"> &nbsp; <input type="submit" class="mysweeps" value="Login">&nbsp; &nbsp; <a href="/forums/register.php?do=signup" target="_blank" class="sitelinks">Want to register?</a></form></td><td width="50%" class="topright" align="right" valign="top"></td></tr>
 
-<table cellpadding="1" cellspacing="0" border="0" width="100%" align="center">
-	<tbody><tr bgcolor="#D5E2C2">
-		<td width="15%" colspan="2" class="nav_links" style="border-top:1px solid #666666; border-bottom:1px solid #666666; border-right:1px solid #666666; border-left:1px solid #666666;" nowrap="">
-		 &nbsp; <span id="navlinks"><a href="/" class="nav_links">Home</a>&nbsp; &gt;&nbsp; Privacy Statement</span></td>
-		<td bgcolor="white" nowrap=""></td>
-	</tr>
-</tbody></table>
 
-<table border="0" width="100%" cellpadding="0" cellspacing="0">
-	<tbody><tr>
-	<td width="1" bgcolor="#666666"></td>
-	<td>
-		<table border="0" width="100%" cellpadding="3" cellspacing="0">
-			<tbody><tr><td colspan="2">
-				<center><br>
-
-				<table border="0" cellpadding="3" cellspacing="3" width="80%" class="small"> 
-					<tbody><tr><td align="justify">
-
-<font face="verdana, arial, helvetica" size="2">
+<tr><td align="center" colspan="2">
+<div style="padding:20px" align="justify">
 
 <center><h3>Online-Sweepstakes.com Privacy Statement</h3></center>
 <blockquote>
-Online-Sweepstakes.com understands that privacy online is important to Visitors of our website. Online-Sweepstakes.com has created this privacy statement in order to demonstrate our firm commitment to privacy. This privacy statement discloses our information gathering and dissemination practices for the following website: /.
+Online-Sweepstakes.com understands that privacy online is important to Visitors of our website. Online-Sweepstakes.com has created this privacy statement in order to demonstrate our firm commitment to privacy. This privacy statement discloses our information gathering and dissemination practices.
 </blockquote>
 
-<b>Personally Identifiable Information</b><br>
+<b>Personally Identifiable Information</b>
 <blockquote>
 Personally Identifiable Information refers to any information that identifies or can be used to identify, contact, or locate the person to whom such information pertains, including, but not limited to, name, address, phone number, fax number, email address, financial profiles, social security number, and credit card information. Personally Identifiable Information does not include information that is collected anonymously (without identification of the individual user) or demographic information not connected to an identified individual.
 </blockquote>
 
-<b>What Personally Identifiable Information is collected?</b><br>
+<b>What Personally Identifiable Information is collected?</b>
 <blockquote>
 We may collect basic user profile information from our Visitors. Online-Sweepstakes.com may collect Personally Identifiable Information when a Visitor (1) registers as a Member of the website, (2) enters a Sweepstakes and/or Contest administered and/or sponsored by Online-Sweepstakes.com, or (3) subscribes to our newsletter(s). Some of the Personally Identifiable Information we may collect includes names, addresses, phone numbers and email addresses.
 </blockquote>
 
-<b>How does the Site use Personally Identifiable Information?</b><br>
+<b>How does the Site use Personally Identifiable Information?</b>
 <blockquote>
 We use Personally Identifiable Information to customize the Site, contact winners of our Sweepstakes and Contests, or send out our newsletter(s). We may also use Personally Identifiable Information to contact our Visitors in response to specific inquiries, to provide requested information, or to provide our Visitors with information regarding our Site which we feel is important enough to warrant such contact.
 </blockquote>
 
-<b>With whom may the information may be shared?</b><br>
+<b>With whom may the information may be shared?</b>
 <blockquote>
 Online-Sweepstakes.com does not and will not sell or share Personally Identifiable Information about our Visitors with third parties unless explicitly authorized by the Visitor to do so. For example, a Visitor's contact information may be shared with sponsors of our Sweepstakes and/or Contests in order to contact the winner and arrange prize fulfillment. Or, a Visitor's contact information may be shared with a third party when a Visitor "Opts-In" to receive an offer from said third party. Our privacy policy does not cover their collection or use of this information.
 <br><br>
 Disclosure of Personally Identifiable Information to comply with law. We will disclose Personally Identifiable Information in order to comply with a court order or subpoena or a request from a law enforcement agency to release information. We will also disclose Personally Identifiable Information when reasonably necessary to protect the safety of our Visitors and Authorized Customers.
 </blockquote>
 
-<b>How is Personally Identifiable Information stored?</b><br>
+<b>How is Personally Identifiable Information stored?</b>
 <blockquote>
 Personally Identifiable Information collected by Online-Sweepstakes.com is securely stored and is not accessible to any third parties except for use as indicated above.
 </blockquote>
 
-<b>What choices are available to Visitors regarding collection, use and distribution of the information?</b><br>
+<b>What choices are available to Visitors regarding collection, use and distribution of the information?</b>
 <blockquote>
-Visitors may "Opt-Out" of receiving information from or being contacted by us by responding to emails as instructed, or by contacting us at <a href="mailto:webmaster@online-sweepstakes.com">webmaster@online-sweepstakes.com</a>. 
+Visitors may "Opt-Out" of receiving information from or being contacted by us by responding to emails as instructed, or by contacting us at webmaster@online-sweepstakes.com. 
 </blockquote>
 
-<b>How can Visitors correct any inaccuracies in Personally Identifiable Information?</b><br>
+<b>How can Visitors correct any inaccuracies in Personally Identifiable Information?</b>
 <blockquote>
-Visitors may update Personally Identifiable Information about them or to correct any inaccuracies by going to the following webpage: <a href="/forums/usercp.php?s=">/forums/usercp.php?s=</a> or by emailing us at <a href="mailto:webmaster@online-sweepstakes.com">webmaster@online-sweepstakes.com</a>.
+Visitors may update Personally Identifiable Information about them or to correct any inaccuracies by going to the following webpage: <a href="/forums/usercp.php?">/forums/usercp.php?</a> or by emailing us at webmaster@online-sweepstakes.com.
 </blockquote>
 
-<b>Can a Visitor delete or deactivate Personally Identifiable Information collected by the Site?</b><br>
+<b>Can a Visitor delete or deactivate Personally Identifiable Information collected by the Site?</b>
 <blockquote>
-We provide Visitors with a mechanism to delete/deactivate Personally Identifiable Information from the Site's database by contacting <a href="mailto:webmaster@online-sweepstakes.com">webmaster@online-sweepstakes.com</a>. However, because of backups and records of deletions, it may be impossible to delete a Visitor's entry without retaining some residual information. An individual who requests to have Personally Identifiable Information deactivated will have this information functionally deleted, and we will not sell, transfer, or use Personally Identifiable Information relating to that individual in any way moving forward.
+We provide Visitors with a mechanism to delete/deactivate Personally Identifiable Information from the Site's database by contacting webmaster@online-sweepstakes.com. However, because of backups and records of deletions, it may be impossible to delete a Visitor's entry without retaining some residual information. An individual who requests to have Personally Identifiable Information deactivated will have this information functionally deleted, and we will not sell, transfer, or use Personally Identifiable Information relating to that individual in any way moving forward.
 </blockquote>
 
-<b>Children's Guidelines</b><br>
+<b>Children's Guidelines</b>
 <blockquote>
 Protecting the privacy of children is especially important. For that reason, we never collect or maintain information at our website from those we actually know are under 13, and no part of our website is structured to attract anyone under 13. 
 </blockquote>
 
-<b>Public Forums</b><br>
+<b>Public Forums</b>
 <blockquote>
 This site makes chat rooms, forums, and/or message boards available to its users. Please 
 remember that any information that is disclosed in these areas becomes public information and you should 
 exercise caution when deciding to disclose your personal information.
 </blockquote>
 
-<b>Cookies</b><br>
+<b>Cookies</b>
 <blockquote>
 Cookies are used by Online-Sweepstakes.com for a variety of reasons. We use Cookies to store information about the preferences of our Visitors and use that data to tailor the Visitor's experience at our site, and to display the Site's content according to their preferences. We also use Cookies to store the usernames and passwords of our Members. Passwords are encrypted to prevent unautorized access of our Members' accounts and information.
 </blockquote>
 
-<b>Links to other Websites</b><br>
+<b>Links to other Websites</b>
 <blockquote>
 This website contains links to other websites. Please note that when you click on one of these links, you are moving to another website. We encourage you to read the privacy statements of these linked sites as their privacy policies may differ from ours.
 </blockquote>
 
-<b>Privacy Policy Changes</b><br>
+<b>Privacy Policy Changes</b>
 <blockquote>
 We will let our Visitors know about changes to our privacy policy by posting such changes on the Site. However, if we are changing our privacy policy in a manner that might cause disclosure of Personally Identifiable Information that a Visitor has previously requested not be disclosed, we will contact such Visitor to the Visitor to prevent such disclosure.
 </blockquote>
 
-<b>Contact Information</b><br>
+<b>Contact Information</b>
 <blockquote>
 Online-Sweepstakes.com<br>
-c/o Brent A. Riley<br>
-3972 Covington Dr.<br>
-Springfield, OH 45503<br><br>
+P.O. Box 157<br>
+Springfield, OH 45501<br><br>
 Phone Number:<br>
 (937) 399-1296<br><br>
 Email Address:<br>
-<a href="mailto:webmaster@online-sweepstakes.com">webmaster@online-sweepstakes.com</a>
+webmaster@online-sweepstakes.com
 </blockquote>
 
-</font>
-<br><br>
-
-					</td></tr>
-				</tbody></table> 
-				<br><br></center>
-			</td></tr>
-			<tr><td valign="top" colspan="2" bgcolor="#666666" height="1"></td></tr>
-		</tbody></table> 
-	</td></tr>
-</tbody></table>
+</div>
 </td></tr>
-</tbody></table>
+
+<tr><td align="right" colspan="2" class="navbar">
+
+
+</td></tr></tbody></table></td></tr><tr><td bgcolor="#666666" height="1" colspan="2"></td></tr></tbody></table></td></tr></tbody></table><br>
+<table width="100%" cellpadding="0" cellspacing="0" border="0">
+<tbody><tr><td align="center" valign="top" class="bottom">
+<a class="menulink" href="/">Home</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/forums/">Forums</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/mysweeps/">MySweeps™</a>
 <br>
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-	<tbody><tr><td align="center" valign="top">
-	<div id="menu"><font size="1">
-		<a class="menu_links" href="/">Home</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/forums/">Forums</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/mysweeps/">MySweeps™</a><span id="ed"></span><br>
-		<a class="menu_links" href="/new/">New Sweeps</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/expiring/">Expiring Sweeps</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/expired/">Expired Sweeps</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/top100/">Top 100 Sweeps</a><br>
-		<a class="menu_links" href="/cgi-bin/search.cgi">Advanced Search</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/contact.html">Contact</a> &nbsp;•&nbsp; 
-		<a class="menu_links" href="/cgi-bin/add.cgi">Add a Sweep</a> 
-	</font></div>
-	</td></tr>
-</tbody></table>
-<br><center><div id="menu" class="small">
-	Copyright © 1997-2003 Online-Sweepstakes.com, All rights reserved.<br>
-		<a href="/disclaimer.html">Disclaimer</a> &nbsp;&amp;&nbsp; 
-		<a href="/privacy.html">Privacy Statement</a>
-</div></center>
+<a class="menulink" href="/new/">New Sweeps</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/expiring/">Expiring Sweeps</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/expired/">Expired Sweeps</a>
+&nbsp;•&nbsp; 
+<a class="menulink" href="/top100/">Top 100 Sweeps</a><br>
+<a class="menulink" href="/search/">Advanced Search</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/contact/">Contact</a> &nbsp;•&nbsp; 
+<a class="menulink" href="/addasweep/">Add a Sweep</a> 
+<br><br>
+Copyright © 1997-2004 Online-Sweepstakes.com, All rights reserved.<br>
+<a href="/useragreement/" class="footerlink">User Agreement/Disclaimer</a> &nbsp;&amp;&nbsp; 
+<a href="/privacy/" class="footerlink">Privacy Statement</a><br>
+<!-- php info -->
+</td></tr></tbody></table>
 
 
 
-
-</body></html>
+</a></body></html>
