--- a/h/ho/hom/homebusinesscenter.com.html
+++ b/h/ho/hom/homebusinesscenter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homebusinesscenter.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605101827id_/http%3A//www.homebusinesscenter.com/disclaimer.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homebusinesscenter.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207003221id_/http%3A//www.homebusinesscenter.com/disclaimer.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Home Business Center disclaimer and privacy policy.</title>
@@ -80,21 +80,21 @@ money working at home" valign="top" height="100" width="340">
 </p><p>
 <table border="0" width="70%"><tbody><tr><td>
 <font size="2" face="arial,helvetica">
-HomeBusinessCenter.com is designed to help visitors obtain information and guidance in the area of home business.  This information service is continually under development. While we try to keep the information up-to-date and accurate, we can make no guarantees as to the performance of each individual company.
+<u>HomeBusinessCenter.com does not give, sell, rent, share or trade any identifiable personal information to any third party regarding our website visitors or newsletter subscribers.</u>
 <p>
-HomeBusinessCenter.com believes that the information dispensed is accurate and reliable, but in some instances the information may represent opinion or judgement. Responses from HomeBusinessCenter.com to questions relating to the home business industry should in no way be regarded as a complete analysis of the subject matter.
-</p><p>
-HomeBusinessCenter.com provides links to other remote websites. Therefore, we are not responsible for the content or guarantees of the products and services they provide.   
-</p><p>
-HomeBusinessCenter.com cannot guarantee any amount of income from a business opportunity or profits from a marketing service since each individual and every home business is different.  Your participation in these business opportunities and services is solely at your own risk.  
-</p><p>
-<u>We do not give, sell, rent, share or trade any identifiable personal information to any third party regarding our website visitors or newsletter subscribers.</u>
-</p><p>
-HomeBusinessCenter.com is committed to protecting your privacy when you visit our website.  You can access HomeBusinessCenter.com and browse our website without disclosing any of your personal data.  HomeBusinessCenter.com does not collect personal information about individuals, such as names or email addresses, unless it is knowingly provided by the individual, and he or she has agreed to the terms under which HomeBusinessCenter.com will use it.
+We are committed to protecting your privacy when you visit our website.  You can access HomeBusinessCenter.com and browse our website without disclosing any of your personal data.  HomeBusinessCenter.com does not collect personal information about individuals, such as names or email addresses, unless it is knowingly provided by the individual, and he or she has agreed to the terms under which HomeBusinessCenter.com will use it.
 </p><p>
 HomeBusinessCenter.com will not sell, trade, or rent your personal information to others. We do not automatically log personal data nor do we link information automatically logged by other means with personal data about specific individuals.
 </p><p>
 Materials appearing on HomeBusinessCenter.com are copyright.  Permission to reprint or electronically reproduce any document or graphic is expressly prohibited unless prior written consent is obtained from HomeBusinessCenter.com.
+</p><p>
+HomeBusinessCenter.com is designed to help visitors obtain information and guidance in the area of home business.  This information service is continually under development. While we try to keep the information up-to-date and accurate, we can make no guarantees as to the performance of each individual company.
+</p><p>
+We believe that the information dispensed is accurate and reliable, but in some instances the information may represent opinion or judgement. Responses from HomeBusinessCenter.com to questions relating to the home business industry should in no way be regarded as a complete analysis of the subject matter.
+</p><p>
+HomeBusinessCenter.com provides links to other remote websites. Therefore, we are not responsible for the content or guarantees of the products and services they provide.   
+</p><p>
+HomeBusinessCenter.com cannot guarantee any amount of income from a business opportunity or profits from a marketing service since each individual and every home business is different.  Your participation in these business opportunities and services is solely at your own risk.  
 </p></font><p><font size="2" face="arial,helvetica">
 If you have any questions, please do not hesitate to contact us directly at <a href="mailto:support@homebusinesscenter.com"><b>HomeBusinessCenter.com</b></a>
 </font>
